# cookiecutter-pypackage

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: Makefile  makefile  setup.cfg
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py
{{ cookiecutter.project_slug }}/tests/: __main__.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: {%- if cookiecutter.is_cli == 'y' %}__main__.py{% endif %}
